--- a/na-frontend/package.json
+++ b/na-frontend/package.json
@@ -18,5 +18,32 @@
   "bugs": {
     "url": "https://github.com/d3spis3d/na-streamer/issues"
   },
-  "homepage": "https://github.com/d3spis3d/na-streamer#readme"
+  "homepage": "https://github.com/d3spis3d/na-streamer#readme",
+  "devDependencies": {
+    "babel-core": "^6.3.17",
+    "babel-eslint": "^4.1.6",
+    "babel-loader": "^6.2.0",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-3": "^6.3.13",
+    "core-js": "^1.2.6",
+    "eslint": "^1.10.3",
+    "eslint-loader": "^1.1.1",
+    "eslint-plugin-react": "^3.11.3",
+    "jasmine": "^2.4.1",
+    "jasmine-core": "^2.4.1",
+    "karma": "^0.13.15",
+    "karma-cli": "^0.1.1",
+    "karma-jasmine": "^0.3.6",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-webpack": "^1.7.0",
+    "phantomjs": "^1.9.19",
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.0"
+  },
+  "dependencies": {
+    "react": "^0.14.3",
+    "react-redux": "^4.0.1",
+    "redux": "^3.0.5",
+    "redux-thunk": "^1.0.0"
+  }
 }
