--- a/na-backend/package.json
+++ b/na-backend/package.json
@@ -4,7 +4,10 @@
   "description": "Streaming audio with Node.js",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon js/index.js --exec babel-node",
+    "build": "babel js -d dist",
+    "serve": "node dist/index.js",
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -18,5 +21,19 @@
   "bugs": {
     "url": "https://github.com/d3spis3d/na-streamer/issues"
   },
-  "homepage": "https://github.com/d3spis3d/na-streamer#readme"
+  "homepage": "https://github.com/d3spis3d/na-streamer#readme",
+  "dependencies": {
+    "express": "^4.13.3"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.3.17",
+    "babel-eslint": "^4.1.6",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-stage-2": "^6.3.13",
+    "babel-register": "^6.3.13",
+    "chai": "^3.4.1",
+    "eslint": "^1.10.3",
+    "mocha": "^2.3.4",
+    "nodemon": "^1.8.1"
+  }
 }
