--- a/na-backend/package.json
+++ b/na-backend/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/d3spis3d/na-streamer#readme",
   "dependencies": {
+    "binaryjs": "^0.2.1",
     "express": "^4.13.3"
   },
   "devDependencies": {
