--- a/na-client/package.json
+++ b/na-client/package.json
@@ -24,7 +24,9 @@
   "homepage": "https://github.com/d3spis3d/na-streamer#readme",
   "dependencies": {
     "binaryjs": "^0.2.1",
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "node-dir": "^0.1.11",
+    "watch": "^0.16.0"
   },
   "devDependencies": {
     "babel-cli": "^6.3.17",
