--- a/na-client/package.json
+++ b/na-client/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/d3spis3d/na-streamer#readme",
   "dependencies": {
     "binaryjs": "^0.2.1",
+    "command-line-args": "^2.1.3",
     "express": "^4.13.3",
     "node-dir": "^0.1.11",
     "watch": "^0.16.0"
