--- a/na-client/package.json
+++ b/na-client/package.json
@@ -27,6 +27,7 @@
     "command-line-args": "^2.1.3",
     "express": "^4.13.3",
     "node-dir": "^0.1.11",
+    "node-uuid": "^1.4.7",
     "watch": "^0.16.0"
   },
   "devDependencies": {
