--- a/na-backend/package.json
+++ b/na-backend/package.json
@@ -24,7 +24,8 @@
   "homepage": "https://github.com/d3spis3d/na-streamer#readme",
   "dependencies": {
     "binaryjs": "^0.2.1",
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "node-uuid": "^1.4.7"
   },
   "devDependencies": {
     "babel-cli": "^6.3.17",
