--- a/na-client/package.json
+++ b/na-client/package.json
@@ -27,8 +27,10 @@
     "command-line-args": "^2.1.3",
     "express": "^4.13.3",
     "node-dir": "^0.1.11",
+    "node-ffprobe": "^1.2.2",
     "node-uuid": "^1.4.7",
     "rx": "^4.0.7",
+    "throttle": "^1.0.3",
     "watch": "^0.16.0"
   },
   "devDependencies": {
