--- a/na-frontend/package.json
+++ b/na-frontend/package.json
@@ -4,7 +4,8 @@
   "description": "git status",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "webpack-dev-server --host localhost --port 8000"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
     "babel-core": "^6.3.17",
     "babel-eslint": "^4.1.6",
     "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-3": "^6.3.13",
     "core-js": "^1.2.6",
