--- a/na-frontend/package.json
+++ b/na-frontend/package.json
@@ -43,6 +43,7 @@
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
+    "binaryjs-client": "^1.0.0",
     "react": "^0.14.3",
     "react-redux": "^4.0.1",
     "redux": "^3.0.5",
