--- a/na-client/package.json
+++ b/na-client/package.json
@@ -42,6 +42,7 @@
     "chai": "^3.4.1",
     "eslint": "^1.10.3",
     "mocha": "^2.3.4",
-    "nodemon": "^1.8.1"
+    "nodemon": "^1.8.1",
+    "sinon": "^1.17.2"
   }
 }
