--- a/na-client/package.json
+++ b/na-client/package.json
@@ -7,7 +7,8 @@
     "start": "nodemon js/index.js --exec babel-node",
     "build": "babel js -d dist",
     "serve": "node dist/index.js",
-    "test": "mocha"
+    "test": "mocha",
+    "coverage": "node_modules/isparta/bin/isparta cover --include-all-sources --report text --report html node_modules/mocha/bin/_mocha"
   },
   "repository": {
     "type": "git",
@@ -41,6 +42,7 @@
     "babel-register": "^6.3.13",
     "chai": "^3.4.1",
     "eslint": "^1.10.3",
+    "isparta": "^4.0.0",
     "mocha": "^2.3.4",
     "nodemon": "^1.8.1",
     "sinon": "^1.17.2"
