--- a/na-frontend/package.json
+++ b/na-frontend/package.json
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "react": "^0.14.3",
+    "react-dom": "^0.14.6",
     "react-redux": "^4.0.1",
     "redux": "^3.0.5",
     "redux-thunk": "^1.0.0"
