Refactor express app setup, add to queue endpoint

--- a/na-backend/package.json
+++ b/na-backend/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/d3spis3d/na-streamer#readme",
   "dependencies": {
     "binaryjs": "^0.2.1",
+    "body-parser": "^1.14.2",
     "express": "^4.13.3",
     "node-uuid": "^1.4.7",
     "orientjs": "^2.1.0",
