--- a/na-backend/package.json
+++ b/na-backend/package.json
@@ -38,6 +38,7 @@
     "babel-preset-stage-2": "^6.3.13",
     "babel-register": "^6.3.13",
     "chai": "^3.4.1",
+    "chai-as-promised": "^5.2.0",
     "eslint": "^1.10.3",
     "isparta": "^4.0.0",
     "mocha": "^2.3.4",
