--- a/na-frontend/package.json
+++ b/na-frontend/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "webpack-dev-server --host localhost --port 8000",
+    "serve": "webpack-dev-server --host 0.0.0.0 --port 8000",
     "build": "webpack"
   },
   "repository": {
