--- a/na-frontend/package.json
+++ b/na-frontend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "webpack-dev-server --host 0.0.0.0 --port 8000",
-    "build": "webpack"
+    "build": "webpack",
+    "mocks": "canned -p 4000 mocks"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-3": "^6.3.13",
+    "canned": "^0.3.9",
     "core-js": "^1.2.6",
     "eslint": "^1.10.3",
     "eslint-loader": "^1.1.1",
