--- a/na-frontend/package.json
+++ b/na-frontend/package.json
@@ -24,32 +24,38 @@
   "homepage": "https://github.com/d3spis3d/na-streamer#readme",
   "devDependencies": {
     "babel-core": "^6.3.17",
-    "babel-eslint": "^4.1.6",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-3": "^6.3.13",
     "canned": "^0.3.9",
-    "core-js": "^1.2.6",
-    "eslint": "^1.10.3",
+    "core-js": "^2.4.1",
+    "eslint": "^3.10.2",
+    "eslint-config-airbnb": "^13.0.0",
     "eslint-loader": "^1.1.1",
-    "eslint-plugin-react": "^3.11.3",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.7.1",
     "jasmine": "^2.4.1",
     "jasmine-core": "^2.4.1",
-    "karma": "^0.13.15",
-    "karma-cli": "^0.1.1",
-    "karma-jasmine": "^0.3.6",
-    "karma-phantomjs-launcher": "^0.2.1",
+    "karma": "^1.3.0",
+    "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.2",
     "karma-webpack": "^1.7.0",
-    "phantomjs": "^1.9.19",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0"
+    "phantomjs": "^2.1.7",
+    "webpack-dev-server": "^1.14.0",
+    "css-loader": "^0.25.0",
+    "style-loader": "^0.13.1"
   },
   "dependencies": {
-    "react": "^0.14.3",
-    "react-dom": "^0.14.6",
+    "webpack": "^1.12.9",
+    "normalize.css": "^5.0.0",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
     "react-redux": "^4.0.1",
     "redux": "^3.0.5",
-    "redux-thunk": "^1.0.0"
+    "redux-thunk": "^2.1.0"
   }
 }
